--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pug-html-loader": "^1.1.5",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.0",
+    "url-loader": "^0.6.2",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.9.4",
     "webpack-merge": "^4.1.1"
