--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.2.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "eslint-config-standard": "^10.2.1",
