--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/frontzhm/webpack-template#readme",
   "dependencies": {
+    "axios": "^0.17.1",
     "eslint": "^4.11.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
